
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct hostent {int h_length; int h_addr; } ;


 int exit (int) ;
 struct hostent* gethostbyname (char*) ;
 long inet_addr (char*) ;
 int memcpy (long*,int ,int ) ;
 int perror (char*) ;

long getip(char *hostname) {
struct hostent *he;
long ipaddr;

if ((ipaddr = inet_addr(hostname)) < 0) {
if ((he = gethostbyname(hostname)) == ((void*)0)) {
perror("gethostbyname()");
exit(-1);
}
memcpy(&ipaddr, he->h_addr, he->h_length);
}
return ipaddr;
}
