; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_22379.c_getip.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_22379.c_getip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hostent = type { i32, i32 }

@.str = private unnamed_addr constant [16 x i8] c"gethostbyname()\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @getip(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.hostent*, align 8
  %4 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = call i64 @inet_addr(i8* %5)
  store i64 %6, i64* %4, align 8
  %7 = icmp slt i64 %6, 0
  br i1 %7, label %8, label %23

8:                                                ; preds = %1
  %9 = load i8*, i8** %2, align 8
  %10 = call %struct.hostent* @gethostbyname(i8* %9)
  store %struct.hostent* %10, %struct.hostent** %3, align 8
  %11 = icmp eq %struct.hostent* %10, null
  br i1 %11, label %12, label %15

12:                                               ; preds = %8
  %13 = call i32 @perror(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %14 = call i32 @exit(i32 -1) #3
  unreachable

15:                                               ; preds = %8
  %16 = load %struct.hostent*, %struct.hostent** %3, align 8
  %17 = getelementptr inbounds %struct.hostent, %struct.hostent* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.hostent*, %struct.hostent** %3, align 8
  %20 = getelementptr inbounds %struct.hostent, %struct.hostent* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @memcpy(i64* %4, i32 %18, i32 %21)
  br label %23

23:                                               ; preds = %15, %1
  %24 = load i64, i64* %4, align 8
  ret i64 %24
}

declare dso_local i64 @inet_addr(i8*) #1

declare dso_local %struct.hostent* @gethostbyname(i8*) #1

declare dso_local i32 @perror(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @memcpy(i64*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
